# cigol

./: .gitignore  CMakeLists.txt  README.md
Source/: Main.cpp
Source/App/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h
Source/Core/: SessionModel.cpp  SessionModel.h
Source/Engine/: AudioEngine.cpp  AudioEngine.h  SuperColliderBridge.cpp  SuperColliderBridge.h
Source/UI/: AppLookAndFeel.h  MainComponent.cpp  MainComponent.h
SynthDefs/: README.md  catalog.json  freezeFx.scd  manifest.tsv  nebulaScene.scd  nebulaScene.scsyndef  tapeBloom.scd  tapeBloom.scsyndef
artifacts/SuperColliderAU.component/Contents/MacOS/: SuperColliderAU
artifacts/SuperColliderAU.component/Contents/Resources/: SuperColliderAU.rsrc
scripts/: build_synthdefs.sh
